--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -8,16 +8,16 @@
 			<div class="list profile-cont padtop5">
 				<ion-item class="item">
 					Price
-					<div class="item-note text-capitalize">
+					<span class="item-note text-capitalize">
 						{{getsinglepro.price}}
-					</div>
+					</span>
 				</ion-item>
 
 				<ion-item class="item">
 					Quantity
-					<div class="item-note text-capitalize">
+					<span class="item-note text-capitalize">
 						{{getsinglepro.quantity}}
-					</div>
+					</span>
 				</ion-item>
 
 <!--
@@ -30,22 +30,22 @@
 -->
 				<ion-item class="item">
 					Category
-					<div class="item-note text-capitalize">
+					<span class="item-note text-capitalize">
 						{{getsinglepro.categoryname}}
-					</div>
+					</span>
 				</ion-item>
 
 				<ion-item class="item">
 					Status
-					<div class="item-note text-capitalize">
+					<span class="item-note text-capitalize">
 						Avaliable
-					</div>
+					</span>
 				</ion-item>
 				<ion-item class="item" ng-click=getallprod(getsinglepro.user);>
 					Shop
-					<div class="item-note text-capitalize blue">
+					<span class="item-note text-capitalize blue">
 						{{getsinglepro.shopname}}
-					</div>
+					</span>
 				</ion-item>
 				<div class="item">
 					Description
