--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -8,14 +8,14 @@
 			<div class="list profile-cont padtop5">
 				<ion-item class="item">
 					Price
-					<span class="item-note text-capitalize">
+					<span class="item-note text-capitalize" style="padding-right:10px;">
 						{{getsinglepro.price}}
 					</span>
 				</ion-item>
 
 				<ion-item class="item">
 					Quantity
-					<span class="item-note text-capitalize">
+					<span class="item-note text-capitalize" style="padding-right:10px;">
 						{{getsinglepro.quantity}}
 					</span>
 				</ion-item>
@@ -30,20 +30,20 @@
 -->
 				<ion-item class="item">
 					Category
-					<span class="item-note text-capitalize">
+					<span class="item-note text-capitalize" style="padding-right:10px;">
 						{{getsinglepro.categoryname}}
 					</span>
 				</ion-item>
 
 				<ion-item class="item">
 					Status
-					<span class="item-note text-capitalize">
+					<span class="item-note text-capitalize" style="padding-right:10px;">
 						Avaliable
 					</span>
 				</ion-item>
 				<ion-item class="item" ng-click=getallprod(getsinglepro.user);>
 					Shop
-					<span class="item-note text-capitalize blue">
+					<span class="item-note text-capitalize blue" style="padding-right:10px;">
 						{{getsinglepro.shopname}}
 					</span>
 				</ion-item>
