--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -5,7 +5,7 @@
 				<img ng-src={{getsinglepro.image|serverimage}}>
 				<h3>{{getsinglepro.name}}</h3>
 			</div>
-			<div class="list profile-cont padtop5">
+			<div class="list padtop5">
 				<ion-item class="item">
 					Price
 					<span class="item-note text-capitalize" style="padding-right:10px;">
