--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -5,7 +5,7 @@
                 <img ng-src={{getsinglepro.image|serverimage}}>
                 <h3>{{getsinglepro.name}}</h3>
             </div>
-            <div class="list padtop5" style="display:table;width:100%;">
+            <div class="list">
                 <ion-item class="item">
                     <span class="item-note text-capitalize">
 						{{getsinglepro.price}}
