--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -6,13 +6,13 @@
                 <h3>{{getsinglepro.name}}</h3>
             </div>
             <div class="list padtop5" style="position:absolute;width:100%;">
-                <ion-item class="item">
+                <ion-item>
                     <span class="item-note text-capitalize">
 						{{getsinglepro.price}}
 					</span>
                     <h2>Price</h2>
                 </ion-item>
-                <ion-item class="item">
+                <ion-item>
                     <span class="item-note text-capitalize">
 						{{getsinglepro.quantity}}
 					</span>
@@ -27,7 +27,7 @@
 					</div>
 				</ion-item>
 -->
-                <ion-item class="item">
+                <ion-item>
 
                     <span class="item-note text-capitalize">
 						{{getsinglepro.categoryname}}
@@ -35,13 +35,13 @@
                     <h2>Category</h2>
                 </ion-item>
 
-                <ion-item class="item">
+                <ion-item>
                     <span class="item-note text-capitalize">
 						Avaliable
 					</span>
                     <h2> Status</h2>
                 </ion-item>
-                <ion-item class="item" ng-click=getallprod(getsinglepro.user);>
+                <ion-item  ng-click=getallprod(getsinglepro.user);>
 
                     <span class="item-note text-capitalize blue">
 						{{getsinglepro.shopname}}
