--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -6,48 +6,48 @@
             <div class="list buy-form">
                 <div class="item item-input text-capitalize">
                     <span class="input-label">Name*</span>
-                    <input class="pull-right" type="text" placeholder="Enter your Name" ng-model="form.name" ng-class="allvalidation[0].validation" required>
+                    <input class="text-right" type="text" placeholder="Enter your Name" ng-model="form.name" ng-class="allvalidation[0].validation" required>
                 </div>
                 <div class="item item-input">
                     <span class="input-label">Email*</span>
-                    <input class="pull-right" type="email" placeholder="Email" ng-model="form.email" ng-class="allvalidation[1].validation" required>
+                    <input class="text-right" type="email" placeholder="Email" ng-model="form.email" ng-class="allvalidation[1].validation" required>
                 </div>
                 <div class="item item-input">
                     <span class="input-label">Contact no*</span>
-                    <input class="pull-right" type="tel" placeholder="Phone Number" maxlength="10" ng-model="form.personalcontact" ng-class="allvalidation[2].validation" required>
+                    <input class="text-right" type="tel" placeholder="Phone Number" maxlength="10" ng-model="form.personalcontact" ng-class="allvalidation[2].validation" required>
                 </div>
                 <div class="item item-input text-capitalize">
                     <span class="input-label">Address*</span>
-                    <textarea class="pull-right form-addrs" ng-model="form.billingaddress" ng-class="allvalidation[3].validation" required></textarea>
+                    <textarea class="text-right form-addrs" ng-model="form.billingaddress" ng-class="allvalidation[3].validation" required></textarea>
                 </div>
                 <div class="item item-input text-capitalize">
                     <span class="input-label">City*</span>
-                    <input class="pull-right" type="text" placeholder="City" ng-model="form.billingcity" ng-class="allvalidation[4].validation" required>
+                    <input class="text-right" type="text" placeholder="City" ng-model="form.billingcity" ng-class="allvalidation[4].validation" required>
                 </div>
                 <div class="item item-input text-capitalize">
                     <span class="input-label">Pincode*</span>
-                    <input class="pull-right" type="tel" maxlength="6" placeholder="Pincode" ng-model="form.billingpincode" ng-class="allvalidation[5].validation" required>
+                    <input class="text-right" type="tel" maxlength="6" placeholder="Pincode" ng-model="form.billingpincode" ng-class="allvalidation[5].validation" required>
                 </div>
                 <div class="item item-input text-capitalize">
                     <span class="input-label">State*</span>
-                    <input class="pull-right" type="text" placeholder="State" ng-model="form.billingstate" ng-class="allvalidation[6].validation" required>
+                    <input class="text-right" type="text" placeholder="State" ng-model="form.billingstate" ng-class="allvalidation[6].validation" required>
                 </div>
                 <div class="item item-input text-capitalize">
                     <span class="input-label">Country*</span>
-                    <input class="pull-right" type="text" placeholder="Country" ng-model="form.billingcountry" ng-class="allvalidation[7].validation" required>
+                    <input class="text-right" type="text" placeholder="Country" ng-model="form.billingcountry" ng-class="allvalidation[7].validation" required>
                 </div>
                 <div class="item item-input text-capitalize">
                     <span class="input-label">Quantity*</span>
-                    <input class="pull-right" type="text" placeholder="Quantity" ng-model="form.quantity" ng-class="allvalidation[8].validation" required>
+                    <input class="text-right" type="text" placeholder="Quantity" ng-model="form.quantity" ng-class="allvalidation[8].validation" required>
 <!--
                     <span>Quantity*</span>
-                      <input type="number" name="quantity" min="1" class="pull-right" placeholder="Quantity" ng-model="form.quantity" ng-class="allvalidation[8].validation" required>
+                      <input type="number" name="quantity" min="1" class="text-right" placeholder="Quantity" ng-model="form.quantity" ng-class="allvalidation[8].validation" required>
 -->
-<!--                    <input class="pull-right" type="text" placeholder="Quantity" ng-model="form.quantity" ng-class="allvalidation[8].validation" required>-->
+<!--                    <input class="text-right" type="text" placeholder="Quantity" ng-model="form.quantity" ng-class="allvalidation[8].validation" required>-->
                 </div>
                 <div class="item item-input text-capitalize">
                     <span class="input-label">Logistic Charge</span>
-                    <input class="pull-right" type="text" placeholder="Logistics Charges" ng-model="form.logisticcharge" ng-class="allvalidation[9].validation" required>
+                    <input class="text-right" type="text" placeholder="Logistics Charges" ng-model="form.logisticcharge" ng-class="allvalidation[9].validation" required>
                 </div>
             </div>
         </form>
@@ -105,23 +105,23 @@
 -->
                     <div class="item item-input text-capitalize">
                         <span class="input-label">Address</span>
-                        <textarea ng-model="form.shippingaddress" class="pull-right"></textarea>
+                        <textarea ng-model="form.shippingaddress" class="text-right"></textarea>
                     </div>
                     <div class="item item-input text-capitalize">
                         <span class="input-label">City</span>
-                        <input ng-model="form.shippingcity" class="pull-right" type="text" placeholder="City">
+                        <input ng-model="form.shippingcity" class="text-right" type="text" placeholder="City">
                     </div>
                     <div class="item item-input text-capitalize">
                         <span class="input-label">Pincode</span>
-                        <input ng-model="form.shippingpincode" class="pull-right" type="text" placeholder="Pincode">
+                        <input ng-model="form.shippingpincode" class="text-right" type="text" placeholder="Pincode">
                     </div>
                     <div class="item item-input text-capitalize">
                         <span class="input-label">State</span>
-                        <input ng-model="form.shippingstate" class="pull-right" type="text" placeholder="State">
+                        <input ng-model="form.shippingstate" class="text-right" type="text" placeholder="State">
                     </div>
                     <div class="item item-input text-capitalize">
                         <span class="input-label">Country</span>
-                        <input class="pull-right" type="text" placeholder="Country" ng-model="form.shippingcountry">
+                        <input class="text-right" type="text" placeholder="Country" ng-model="form.shippingcountry">
                     </div>
 
                 </div>
