--- a/templates/modal-mypurchase.html
+++ b/templates/modal-mypurchase.html
@@ -40,6 +40,12 @@
                         {{getp.id}}
                     </div>
                 </ion-item>
+                <ion-item class="item-left">
+                    <h2>Quantity</h2>
+                    <div class="pull-right item-right text-capitalize">
+						{{getp.quantity}}
+                    </div>
+                </ion-item>
             </div>
         </div>
     </ion-content>
