--- a/templates/modal-mysale.html
+++ b/templates/modal-mysale.html
@@ -40,6 +40,12 @@
                         {{getsell.id}}
                     </div>
                 </ion-item>
+                 <ion-item class="item-left">
+                    <h2>Quantity</h2>
+                    <div class="pull-right item-right text-capitalize">
+						{{getsell.quantity}}
+                    </div>
+                </ion-item>
             </div>
         </div>
 
