--- a/css/style.css
+++ b/css/style.css
@@ -1059,3 +1059,9 @@ button.button.button-icon.button-clear.ion-navicon.hide {
   position: absolute;
   right: 17px;
 }
+.buy-inputdetails{
+    text-align: right;
+  background-color: white!important;
+  padding-bottom: 20px;
+  color: #B9B9B9!important;
+}
