--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="item item-input text-capitalize">
                     <span class="input-label">Address*</span>
-                    <textarea class="text-right form-addrs" ng-model="form.billingaddress" ng-class="allvalidation[3].validation" required></textarea>
+                    <textarea class="text-right addresss form-addrs" ng-model="form.billingaddress" ng-class="allvalidation[3].validation" required></textarea>
                 </div>
                 <div class="item item-input text-capitalize">
                     <span class="input-label">City*</span>
