--- a/templates/productedit.html
+++ b/templates/productedit.html
@@ -21,20 +21,20 @@
 -->
                     <div class="item item-input text-capitalize">
                         <span class="input-label">Name</span>
-                        <input type="text" placeholder="Name" ng-model="prodetails.name" class="pull-right" ng-class="allvalidation[0].validation" required>
+                        <input type="text" placeholder="Name" ng-model="prodetails.name" class="text-right" ng-class="allvalidation[0].validation" required>
                     </div>
                     <div class="item  item-input text-capitalize">
                         <span class="input-label">Price</span>
-                        <input type="text" placeholder="Price" ng-model="prodetails.price" class="pull-right" ng-class="allvalidation[1].validation" required>
+                        <input type="text" placeholder="Price" ng-model="prodetails.price" class="text-right" ng-class="allvalidation[1].validation" required>
                     </div>
                     <div class="item  item-input text-capitalize">
                         <span class="input-label">Quantity</span>
-                        <input type="text" placeholder="Quantity" ng-model="prodetails.quantity" class="pull-right" ng-class="allvalidation[2].validation" required>
+                        <input type="text" placeholder="Quantity" ng-model="prodetails.quantity" class="text-right" ng-class="allvalidation[2].validation" required>
                     </div>
 <!--
                     <div class="item  item-input text-capitalize">
                         <span class="input-label">SKU</span>
-                        <input type="text" placeholder="SKU" ng-model="prodetails.sku" class="pull-right">
+                        <input type="text" placeholder="SKU" ng-model="prodetails.sku" class="text-right">
                     </div>
 -->
                     <div class="item item-toggle">
