--- a/templates/notification.html
+++ b/templates/notification.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Notification">
     <ion-content class="padding">
+       <p class="royal padding text-center" ng-if="notification.length==0">No Notifications yet.</p>
         <div class="incard notification" ng-repeat="n in notification">
             <div class="header-cards">Business
                 <span style="float:right; font-size:14px;">{{n.date}}</span>
