--- a/css/style.css
+++ b/css/style.css
@@ -809,6 +809,7 @@ ion-item.item.item-thumbnail-left.trns-add {
 
 .input-div img {
     width: 100%;
+    height: 60px;
 }
 
 .membershipno input {
@@ -858,6 +859,8 @@ i.icon.ion-record.icon-actived {
 .col.input-div button {
     padding: 0;
     border: 0px;
+    margin: 0px;
+    height: 60px;
 }
 
 .leftname {
@@ -1063,4 +1066,13 @@ button.button.button-icon.button-clear.ion-navicon.hide {
 
 .item-input textarea {
     width: 56%;
+}
+
+/* webkit solution */
+input.text-right ::-webkit-input-placeholder { text-align:right; }
+/* mozilla solution */
+input.text-right :-moz-placeholder { text-align:right; }
+
+.row.productsCol .col img {
+    height: 90px;
 }
