--- a/templates/shop.html
+++ b/templates/shop.html
@@ -72,7 +72,7 @@
             </div>
             <div class="row">
                 <div class="col input-div" ng-repeat="s in shoppic">
-                    <button class="button" ng-click="openpswd();">
+                    <button class="button" ng-click="openpswd($index);">
                         <img ng-src="{{s.photo|serverimage}}" class="full-size">
                     </button>
                 </div>
