--- a/templates/profile.html
+++ b/templates/profile.html
@@ -73,7 +73,7 @@
                     <h2>Shops Photos</h2>
                 </div>
                 <div class="row">
-                    <div class="col input-div" ng-repeat="p in pic" ng-click="openshop();">
+                    <div class="col input-div" ng-repeat="p in pic" ng-click="openshop($index);">
                         <div class="img-profile">
                             <img ng-src="{{p.photo|serverimage}}">
                         </div>
@@ -83,7 +83,7 @@
                     <h2>Products Photos</h2>
                 </div>
                 <div class="row">
-                    <div class="col input-div" ng-repeat="i in image" ng-click="openpswds();">
+                    <div class="col input-div" ng-repeat="i in image" ng-click="openpswds($index);">
                         <div class="img-profile">
                             <img ng-src="{{i.photo|serverimage}}">
                         </div>
