--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -107,7 +107,7 @@
                                     <div class="holder2">Edit</div>
                                 </div>
                             </div>
-                            <div class="input-div" ng-if="image.length==0 || image.length==1 ||  image.length==2" ng-click="changeproductimage('');">
+                            <div class="col input-div" ng-if="image.length==0 || image.length==1 ||  image.length==2" ng-click="changeproductimage('');">
                                 <div class="img-profile">
                                     <img src="img/add.png">
                                     <div class="holder2">Edit</div>
