--- a/www/templates/profile-edit.html
+++ b/www/templates/profile-edit.html
@@ -57,6 +57,7 @@
                             <div class="col input-div" ng-repeat="i in pic" ng-click="changeshopimage(i.id);">
                                 <div class="img-profile">
                                     <img ng-src="{{i.photo|serverimage}}">
+                                    <div class="holder2">Edit</div>
                                 </div>
                             </div>
 
@@ -89,25 +90,26 @@
                         </div>
                        <div class="row">
 
-                           <div class="col input-div" ng-repeat="i in image" ng-click="changeproductimage(i.id);">
+                           <div class="col input-div text-center" ng-repeat="i in image" ng-click="changeproductimage(i.id);">
                                 <div class="img-profile">
                                     <img ng-src="{{i.photo|serverimage}}">
+                                    <div class="holder2">Edit</div>
                                 </div>
                             </div>
 
-                            <div class="col input-div" ng-if="image.length==0" ng-click="changeproductimage('');">
+                            <div class="col input-div text-center" ng-if="image.length==0" ng-click="changeproductimage('');">
                                 <div class="img-profile">
                                     <img src="img/add.png">
                                     <div class="holder2">Edit</div>
                                 </div>
                             </div>
-                            <div class="col input-div" ng-if="image.length==0 || image.length==1" ng-click="changeproductimage('');">
+                            <div class="col input-div text-center" ng-if="image.length==0 || image.length==1" ng-click="changeproductimage('');">
                                 <div class="img-profile">
                                     <img src="img/add.png">
                                     <div class="holder2">Edit</div>
                                 </div>
                             </div>
-                            <div class="input-div" ng-if="image.length==0 || image.length==1 ||  image.length==2" ng-click="changeproductimage('');">
+                            <div class="input-div text-center" ng-if="image.length==0 || image.length==1 ||  image.length==2" ng-click="changeproductimage('');">
                                 <div class="img-profile">
                                     <img src="img/add.png">
                                     <div class="holder2">Edit</div>
