problem solved for edit imgs

--- a/www/templates/profile-edit.html
+++ b/www/templates/profile-edit.html
@@ -76,7 +76,7 @@
                             </div>
 
 
-                            <div class="input-div" ng-if="pic.length==0 || pic.length==1 ||  pic.length==2" ng-click="changeshopimage('');">
+                            <div class="col input-div" ng-if="pic.length==0 || pic.length==1 ||  pic.length==2" ng-click="changeshopimage('');">
                                 <div class="img-profile">
                                     <img src="img/add.png">
                                     <div class="holder2">Edit</div>
@@ -109,7 +109,7 @@
                                     <div class="holder2">Edit</div>
                                 </div>
                             </div>
-                            <div class="input-div text-center" ng-if="image.length==0 || image.length==1 ||  image.length==2" ng-click="changeproductimage('');">
+                            <div class="col input-div text-center" ng-if="image.length==0 || image.length==1 ||  image.length==2" ng-click="changeproductimage('');">
                                 <div class="img-profile">
                                     <img src="img/add.png">
                                     <div class="holder2">Edit</div>
