--- a/www/css/style.css
+++ b/www/css/style.css
@@ -668,20 +668,19 @@ h5.member {
 }
 
 .holder2 {
-    width: 94%;
-    text-align: center;
-    background: rgba(0, 0, 0, 0.4);
-    color: white;
-    position: absolute;
-    bottom: 6px;
-    left: 4px;
-    margin: auto;
+   width: 100%;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.4);
+  color: white;
+  position: absolute;
+  bottom: 6px;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: auto;
 }
 
 .img-profile {
     position: relative;
-    overflow: hidden;
-    display: table-cell;
 }
 
 .button.bold {
