--- a/www/css/style.css
+++ b/www/css/style.css
@@ -674,8 +674,10 @@ h5.member {
   color: white;
   position: absolute;
   bottom: 6px;
+/*
   left: 50%;
   transform: translateX(-50%);
+*/
   margin: auto;
 }
 
