edit status done

--- a/www/templates/productedit.html
+++ b/www/templates/productedit.html
@@ -64,7 +64,7 @@
                 </div>
             </form>
             <div class="padding">
-                <button class="button button-block button-balanced" ng-click="editproducts(prodetails);editstatus(prodetails.id,prodetails.status);">Update</button>       
+                <button class="button button-block button-balanced" ng-click="editproducts(prodetails);">Update</button>       
                          <button class="button button-block button-assertive" ng-click="deleteproduct(prodetails.id,prodetails.user);">Delete</button>
             </div>
         </div>
