image upload done

--- a/www/templates/profile-edit.html
+++ b/www/templates/profile-edit.html
@@ -118,7 +118,7 @@
 
                         </div>
                         <div class="padding-horizontal btn-rest">
-                            <button class="button button-block button-balanced" type="submit" ng-click="profileupdate(profile);updatecat(profile.categoryid);updatearea(profile.areaid);">Update</button>
+                            <button class="button button-block button-balanced" type="submit" ng-click="profileupdate();updatecat(profile.categoryid);updatearea(profile.areaid);">Update</button>
                         </div>
                     </div>
                 </form>
