input typ number & purchased from n sold to

--- a/www/templates/modal-mysale.html
+++ b/www/templates/modal-mysale.html
@@ -8,6 +8,12 @@
     <ion-content class="padding">
         <div class="incard">
             <div class="list profile-cont padtop5">
+               <ion-item class="item-left">
+                    <h2>Sold To</h2>
+                    <div class="pull-right item-right text-capitalize">
+                        {{getsell.shopname}}
+                    </div>
+                </ion-item>
                 <ion-item class="item-left">
                     <h2>Date</h2>
                     <div class="pull-right item-right text-capitalize">
@@ -40,6 +46,7 @@
                         {{getsell.id}}
                     </div>
                 </ion-item>
+                 
                  <ion-item class="item-left">
                     <h2>Quantity</h2>
                     <div class="pull-right item-right text-capitalize">
