--- a/www/templates/checkout.html
+++ b/www/templates/checkout.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="item item-input text-capitalize">
                     <span class="input-label">Quantity*</span>
-                    <input class="text-right" type="text" placeholder="Quantity" ng-model="form.quantity" ng-class="allvalidation[8].validation" required>
+                    <input class="text-right" type="number" min="1" placeholder="Quantity" ng-model="form.quantity" ng-class="allvalidation[8].validation" required>
 <!--
                     <span>Quantity*</span>
                       <input type="number" name="quantity" min="1" class="text-right" placeholder="Quantity" ng-model="form.quantity" ng-class="allvalidation[8].validation" required>
